[project]
name = "api"
version = "0.1.0"
description = "Calculate the monthly floating interest given the maturity date rate floor, ceiling and spread"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.40",
]


[dependency-groups]
dev = [
    "ipython>=9.2.0",
    "ruff>=0.11.7",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
