[project]
name = "etl"
version = "0.1.0"
description = "ETL script that extracts the 1-Month SOFR forward rates"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.2",
]


[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]

[tool.pytest.ini_options]
pythonpath = "src"
